Changes to support notebook configurations and handle the async tasks